--- a/Shelter/acount_edit.html
+++ b/Shelter/acount_edit.html
@@ -22,7 +22,7 @@
       background-color: #f7e8cf;
       font-family: 'Roboto', sans-serif;
       line-height: 1.6;
-      font-size: 16px;
+      font-size: 19px;
       margin: 0px;
     }
     .container {
@@ -30,52 +30,23 @@
   align-items: center; /* 垂直方向中央揃え */
   justify-content: center; /* 水平方向中央揃え */
 }
-
 .edit{
+  text-align: center;
   margin: 30px;
 }
-/****nav*****/
-    nav {
-      background-color: #7d0842;
-      color: white;
-      padding: 10px;
-    }
-/*****san menu******/
-    .hamburger-menu {
-      display: none;
-      cursor: pointer;
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      color: white;
-      font-size: 20px;
-    }
-
-    .nav-list {
-      list-style: none;
-      display: flex;
-    }
-
-    .nav-item {
-      margin-right: 20px;
-    }
-/****pe-zi seni*****/
-    .nav-link {
-      text-decoration: none;
-      color: white;
-    }
 /*テキスト入力*/
     .form_txt {
-      margin-bottom: 20px;
-  display: flex;
-  align-items: center;
+    margin-bottom: 30px;
+    display: flex;
+    align-items: center;/*インラインまたはインラインブロック要素を水平に配置する*/
+  justify-content: center; /* 中央揃えを追加 */
     }
     .form_txt input {
       display: block;
-      width: 150px;
-      padding: 10px;
-      margin-top: 5px;
-      margin-bottom: 15px;
+  width: 250px; /* 幅を変更 */
+  padding: 15px; /* パディングを変更 */
+  margin-top: 10px; /* マージンを変更 */
+  margin-bottom: 20px; /* マージンを変更 */
       border: none;
       border-bottom: 2px solid #373737;
       outline: none;
@@ -83,13 +54,15 @@
     }
     .form_txt label {
   margin-right: 10px; /* ラベルとテキストボックスの間隔を調整 */
+  width: 80px; /* Fixed width for labels */
 }
 /* 例: アイコンのスタイル */
 .account-icon {
-  width: 80px; /* アイコンの幅 */
-  height: 80px; /* アイコンの高さ */
+  width: 100px; /* アイコンの幅 */
+  height: 100px; /* アイコンの高さ */
   border-radius: 50%; /* 丸い形状にする */
   margin-right: 10px; /* アイコンと他の要素の間隔 */
+  margin-bottom: 10px;
 }
     /* check_box */
     .form_chk {
@@ -117,18 +90,17 @@
       background-color: #7d0842;
       color: #ffffff;
     }
-    
     /*radio_button*/
     .form_radio {
-      margin-bottom: 20px;
+      margin-bottom: 30px;
     }
     .form_radio label {
       display: inline-block;
       padding: 10px;
       border: 1px solid #ffffff;
       margin-right: 10px;
-      margin-bottom: 10px;/*次の下側の要素までの距離*/
-      border-radius: 5px;
+      margin-bottom: 15px;/*次の下側の要素までの距離*/
+      border-radius: 5px;/*角消し*/
       /* チェックされていない場合のスタイル ★★★*/
       background-color: #ffffff;
       color: #000000;
@@ -140,28 +112,31 @@
     .form_radio input:checked+label {
       background-color: #7d0842;
       color: #ffffff;
+      /*width: 80px;/*要素の横幅*/
     }
-
-/*****button******/
+    /* container style */
     .form_but {
-      text-align: center;
+      position: absolute;
+      right: 10%;
+      top: auto;
+      padding: 10px; /* 必要に応じてパディングを調整してください */
+    }
+    /*button */
+    .form_but input {
+      margin-right: 5px;
+      padding: 5px 25px; /* 上下10px、左右20pxのbutton余白 */
+      background-color: #ffffff; /* ボタンの背景色 */
+      border: 3px solid #7d0842; /* ボーダーなし */
+      border-radius: 5px; /* 丸い形状にする */
+      cursor: pointer; /* ホバー時にポインターを表示 */
+      font-size: 23px;
     }
   </style>
 
 </head>
 
 <body class="mat-typography">
-  <nav>
-    <div class="hamburger-menu">
-      <p>三</p>
-      <h3>アプリ名</h3>
-    </div>
-      <ul class="nav-list">
-        <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
-      </ul>
-  </nav>
+
 <div class="edit">
   <div class="container">
   <!--アカウントアイコンと変更したいなら写真にアクセスしますよのボタン--->
